--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   </style>
   <body style="text-align: center;">
-    <rcenter><div id="microphone"></div></center>
+    <rcenter><div id="microphone"></div></rcenter>
    <!--  <form id="searchForm" action="javascript:search();">
         <input placeholder="Type or say search query and press enter" name="command" method="post" class="godBox"/>
       </form> -->
